--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,49 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+
+.up {
+  font-size: 50px;
+  position: absolute;
+  left: 10px;
+}
+
+.down {
+  font-size: 50px;
+  position: absolute;
+  right: 10px;
+}
+
+.numeros {
+  font-size: 80px;
+  line-height: 200px;
+  text-align: center;
+  margin-top: 30px;
+}
+
+.card {
+  display: inline-block;
+  margin: auto;
+  border-radius: 10px;
+}
+
+.press {
+  border-radius: 10px;
+}
+
+.card.spade::after,
+.card.spade::before {
+  content: "\2660";
+}
+.card.club::after,
+.card.club::before {
+  content: "\2663";
+}
+.card.heart::after,
+.card.heart::before {
+  content: "\2665";
+  color: red;
+}
+.card.diamond::after,
+.card.diamond::before {
+  content: "\2666";
+  color: red;
+}
